syntax = "proto3";
option go_package = "./ecommerce";

package ecommerce;

service ProductInfo {
    rpc addProduct (Product) returns (ProductID);
    rpc getProduct (ProductID) returns (Product);
}

message Product {
    string is = 1;
    string name = 2;
    string description = 3;
    float price = 4;
}

message ProductID {
    string value = 1;
}